solved file-history wrapping/overflow issue

--- a/src/less/history.less
+++ b/src/less/history.less
@@ -8,7 +8,7 @@
     left: 0px;
     height: 34px;
     padding: 0px;
-    
+    white-space: nowrap;
     overflow-x: auto;
     overflow-y: hidden;
     
@@ -32,17 +32,19 @@
     
     .clear-history {
         position: absolute;
-        right: 0px;
-        
-        width: 40px;
-        height: 40px;
-        
+        right: 6px;
+        width: 20px;
+        height: 20px;
         background: none;
         outline: none;
         border: none;
-        
         font-size: 16px;
         cursor: pointer;
+        bottom: 8px;
+        background-color: gray;
+        border-radius: 100%;
+        z-index: 80;
+        padding: 0px;
     }
     
     .file {
@@ -56,7 +58,7 @@
         font-size: 13px;
         background-color: white;
         cursor: pointer;
-        top: 5px;
+        bottom: 1px;
         
         transition: all 0.2s ease-in-out;
         
