--- a/src/less/plugin-viewer.less
+++ b/src/less/plugin-viewer.less
@@ -8,12 +8,15 @@
     right: -110%;
     width: 300px;
     z-index: 85;
-
+    opacity: 0;
+    pointer-events: none;
     background-color: white;
 
     transition: all 1s ease-in-out;
 
     &.active {
+        opacity: 1;
+        pointer-events: all;
         padding: 5px;
         right: 0px;
     }
